nova_tests/negative_capability/folder_cycle_setup/modA/two.nv
// modA peer 2 — нужен чтобы папка считалась folder-module (≥2 peers).

module folder_cycle_setup.modA

export fn a_extra() -> int =>
    100
